Start time dependency section

--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -129,7 +129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e771a7229244d969b927d68d3b938cc",
+       "model_id": "cae3d8c35b634a338237ae791689da4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f3258c29070>"
+       "<matplotlib.legend.Legend at 0x7f0011bdea90>"
       ]
      },
      "execution_count": 7,
@@ -226,8 +226,8 @@
     "    coords={\"c\": [\"x\", \"y\", \"z\"]},\n",
     ")\n",
     "\n",
-    "csm.assign_data(sensor_positions_in_root,\"sensors\", \"root\")\n",
-    "csm.assign_data(specimen_geometry_in_specimen,\"specimen geometry\", \"specimen\")"
+    "csm.assign_data(sensor_positions_in_root, \"sensors\", \"root\")\n",
+    "csm.assign_data(specimen_geometry_in_specimen, \"specimen geometry\", \"specimen\")"
    ]
   },
   {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,13 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d3a5f81ecf0407da43916888409271b",
+       "model_id": "a042bbd1e46d4fd8977861bf843f3a47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,10 +294,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f3257fb8be0>"
+       "<matplotlib.legend.Legend at 0x7f0011b21bb0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,9 +318,21 @@
     "vs.plot_coordinate_system(lcs_flange_in_root, ax_0_02, color=\"g\", label=\"flange\")\n",
     "vs.plot_coordinate_system(lcs_specimen_in_root, ax_0_02, color=\"y\", label=\"specimen\")\n",
     "vs.plot_coordinate_system(lcs_torch_in_root, ax_0_02, color=\"b\", label=\"torch\")\n",
-    "ax_0_02.plot(specimen_geometry_in_root[:,0],specimen_geometry_in_root[:,1],specimen_geometry_in_root[:,2], \"xc\", label=\"specimen geometry\")\n",
-    "ax_0_02.plot(sensor_positions_in_root[:,0],sensor_positions_in_root[:,1],sensor_positions_in_root[:,2], \"xk\", label=\"sensor positions\")\n",
-    "    \n",
+    "ax_0_02.plot(\n",
+    "    specimen_geometry_in_root[:, 0],\n",
+    "    specimen_geometry_in_root[:, 1],\n",
+    "    specimen_geometry_in_root[:, 2],\n",
+    "    \"xc\",\n",
+    "    label=\"specimen geometry\",\n",
+    ")\n",
+    "ax_0_02.plot(\n",
+    "    sensor_positions_in_root[:, 0],\n",
+    "    sensor_positions_in_root[:, 1],\n",
+    "    sensor_positions_in_root[:, 2],\n",
+    "    \"xk\",\n",
+    "    label=\"sensor positions\",\n",
+    ")\n",
+    "\n",
     "\n",
     "ax_0_02.set_xlim([-3, 3])\n",
     "ax_0_02.set_ylim([-3, 3])\n",
@@ -334,8 +346,20 @@
     "vs.plot_coordinate_system(lcs_flange_in_torch, ax_1_02, color=\"g\", label=\"flange\")\n",
     "vs.plot_coordinate_system(lcs_specimen_in_torch, ax_1_02, color=\"y\", label=\"specimen\")\n",
     "vs.plot_coordinate_system(lcs_torch_in_torch, ax_1_02, color=\"b\", label=\"torch\")\n",
-    "ax_1_02.plot(specimen_geometry_in_torch[:,0],specimen_geometry_in_torch[:,1],specimen_geometry_in_torch[:,2], \"xc\", label=\"specimen geometry\")\n",
-    "ax_1_02.plot(sensor_positions_in_torch[:,0],sensor_positions_in_torch[:,1],sensor_positions_in_torch[:,2], \"xk\", label=\"sensor positions\")\n",
+    "ax_1_02.plot(\n",
+    "    specimen_geometry_in_torch[:, 0],\n",
+    "    specimen_geometry_in_torch[:, 1],\n",
+    "    specimen_geometry_in_torch[:, 2],\n",
+    "    \"xc\",\n",
+    "    label=\"specimen geometry\",\n",
+    ")\n",
+    "ax_1_02.plot(\n",
+    "    sensor_positions_in_torch[:, 0],\n",
+    "    sensor_positions_in_torch[:, 1],\n",
+    "    sensor_positions_in_torch[:, 2],\n",
+    "    \"xk\",\n",
+    "    label=\"sensor positions\",\n",
+    ")\n",
     "ax_1_02.set_xlim([-3, 3])\n",
     "ax_1_02.set_ylim([-3, 3])\n",
     "ax_1_02.set_zlim([-3, 3])\n",
@@ -352,11 +376,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert csm.transform_data(specimen_geometry_in_specimen,\"specimen\",\"root\").identical(specimen_geometry_in_root)"
+    "assert csm.transform_data(specimen_geometry_in_specimen, \"specimen\", \"root\").identical(\n",
+    "    specimen_geometry_in_root\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Time dependencies\n",
+    "\n",
+    "As described in the previous tutorial about the `LocalCoordinateSystem` class, the orientation of a coordinate system towards its reference system might vary in time. Time dependent coordinate systems are not treated any different than constant coordinate systems. To demonstrate this, we create a new `CoordinateSystemManager` with some time dependent coordinate systems."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_time = [\"01-01-2020\", \"05-01-2020\"]\n",
+    "parent_coords = [[1, 1, 0], [-1, 1, 0]]\n",
+    "lcs_parent_in_root = tf.LocalCoordinateSystem(\n",
+    "    coordinates=parent_coords, time=parent_time\n",
+    ")\n",
+    "\n",
+    "child_time = [\"02-01-2020\", \"04-01-2020\"]\n",
+    "child_coords = [[1, 1, 0], [-1, 1, 0]]\n",
+    "lcs_child_in_parent = tf.LocalCoordinateSystem(\n",
+    "    coordinates=parent_coords, time=parent_time\n",
+    ")\n",
+    "\n",
+    "csm_tdp = tf.CoordinateSystemManager(\"root\")\n",
+    "csm_tdp.add_coordinate_system(\"parent\", \"root\", lcs_parent_in_root)\n",
+    "csm_tdp.add_coordinate_system(\"child\", \"parent\", lcs_child_in_parent)"
    ]
   },
   {
