--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -868,6 +868,8 @@
    "source": [
     "As you can see, the time values `\"2010-02-01\"` and `\"2010-02-11\"`, which lie outside the original range from `\"2010-02-02\"` and `\"2010-02-07\"`  still get valid values due to the broadcasting across time range boundaries. The intermediate coordinates and orientations are interpolated as expected.\n",
     "\n",
+    "> **TODO:** Mention interpolation behavior of `+` and `*`\n",
+    "\n",
     "# Transformation of spatial data\n",
     "\n",
     "The `LocalCoordinateSystem` only defines how the different coordinate systems are oriented towards each other. If you want to transform spatial data which is defined in one coordinate system (for example specimen geometry/point cloud) you have to use the `CoordinateSystemManager`, which is discussed in the next tutorial or do the transformation manually.\n",
@@ -1069,9 +1071,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (test-environment)",
+   "display_name": "libo (3.8)",
    "language": "python",
-   "name": "test-environment"
+   "name": "libo_38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1083,7 +1085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
