Continue section about time dependency

--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -129,7 +129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cae3d8c35b634a338237ae791689da4f",
+       "model_id": "ca62dfd56cfb44bfa3c653a3805cbd8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f0011bdea90>"
+       "<matplotlib.legend.Legend at 0x7f599de60760>"
       ]
      },
      "execution_count": 7,
@@ -280,7 +280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a042bbd1e46d4fd8977861bf843f3a47",
+       "model_id": "d38f4756422f47218337bf173b14810f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,7 +294,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f0011b21bb0>"
+       "<matplotlib.legend.Legend at 0x7f599dcf49a0>"
       ]
      },
      "execution_count": 11,
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,6 +415,75 @@
     "csm_tdp = tf.CoordinateSystemManager(\"root\")\n",
     "csm_tdp.add_coordinate_system(\"parent\", \"root\", lcs_parent_in_root)\n",
     "csm_tdp.add_coordinate_system(\"child\", \"parent\", lcs_child_in_parent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we request from the `CoordinateSystemManager` to transform all coordinate systems to the `\"root\"` system: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lcs_child_in_root = csm_tdp.get_local_coordinate_system(\"child\", \"root\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e83b956ae5f145f88010f92440a71737",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7f59987e06d0>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fig_tdp = plt.figure()\n",
+    "ax_tdp = plt.gca(projection=\"3d\")\n",
+    "for i in range(len(lcs_child_in_root.time)):\n",
+    "    label = None\n",
+    "    if i == 0:\n",
+    "        label=\"child\"\n",
+    "    vs.plot_coordinate_system(lcs_child_in_root, ax_tdp, color=\"y\", label=label, time_idx=i)\n",
+    "    \n",
+    "ax_tdp.set_xlim([-3, 3])\n",
+    "ax_tdp.set_ylim([-3, 3])\n",
+    "ax_tdp.set_zlim([-3, 3])\n",
+    "ax_tdp.set_title(\"root system\")\n",
+    "ax_tdp.legend(loc=\"lower left\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **TODO** Time dependent data"
    ]
   },
   {
