--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -33,6 +33,8 @@
    "outputs": [],
    "source": [
     "# necesessary packages\n",
+    "import numpy as np\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import weldx.transformations as tf\n",
     "import weldx.visualization as vs\n",
@@ -129,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca62dfd56cfb44bfa3c653a3805cbd8a",
+       "model_id": "927281cfeccb4e55ac7d0d1516b0421f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f599de60760>"
+       "<matplotlib.legend.Legend at 0x7f945fe23be0>"
       ]
      },
      "execution_count": 7,
@@ -280,7 +282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d38f4756422f47218337bf173b14810f",
+       "model_id": "5eab2a2e6da6422e9af64788dc0864af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,7 +296,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f599dcf49a0>"
+       "<matplotlib.legend.Legend at 0x7f945fbc6850>"
       ]
      },
      "execution_count": 11,
@@ -391,30 +393,42 @@
    "source": [
     "## Time dependencies\n",
     "\n",
-    "As described in the previous tutorial about the `LocalCoordinateSystem` class, the orientation of a coordinate system towards its reference system might vary in time. Time dependent coordinate systems are not treated any different than constant coordinate systems. To demonstrate this, we create a new `CoordinateSystemManager` with some time dependent coordinate systems."
+    "As described in the previous tutorial about the `LocalCoordinateSystem` class, the orientation of a coordinate system towards its reference system might vary in time. Form the API side, time dependent coordinate systems are not treated any different than constant coordinate systems. However, the `get_local_coordinate_system` function needs to perform some time interpolations internally if the timestamps of all involved coordinate systems aren't identical. You might wonder which timestamps the resulting interpolated `LocalCoordinateSystem` possesses. The default behavior is that its timestamps are the time union of all coordinate systems participating in the transformation. However, you can also provide the desired timestamps as a `pandas.DatetimeIndex` object using the `time` parameter of the `get_local_coordinate_system` function. Another method is to pass the name of a coordinate system that should provide the timestamps to the `time` parameter.\n",
+    "\n",
+    "Let's define a new `CoordinateSystemManager` to demonstrate the different approaches:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_time = [\"01-01-2020\", \"05-01-2020\"]\n",
-    "parent_coords = [[1, 1, 0], [-1, 1, 0]]\n",
+    "parent_time = [\"01-03-2020\", \"06-01-2020\"]\n",
+    "parent_coords = [[1, -1, 0], [0, -1, 0]]\n",
+    "parent_orientation = tf.rotation_matrix_z([0, np.pi / 2])\n",
     "lcs_parent_in_root = tf.LocalCoordinateSystem(\n",
-    "    coordinates=parent_coords, time=parent_time\n",
+    "    coordinates=parent_coords, orientation=parent_orientation, time=parent_time\n",
     ")\n",
     "\n",
-    "child_time = [\"02-01-2020\", \"04-01-2020\"]\n",
-    "child_coords = [[1, 1, 0], [-1, 1, 0]]\n",
+    "child_time = [\"02-01-2020\", \"05-01-2020\"]\n",
+    "child_coords = [0, 2, 0]\n",
+    "child_orientation = tf.rotation_matrix_z([0, np.pi / 2])\n",
     "lcs_child_in_parent = tf.LocalCoordinateSystem(\n",
-    "    coordinates=parent_coords, time=parent_time\n",
+    "    coordinates=child_coords,orientation=child_orientation, time=child_time\n",
+    ")\n",
+    "\n",
+    "childchild_time = [\"03-01-2020\", \"04-01-2020\"]\n",
+    "childchild_coords = [2, 0, 0]\n",
+    "childchild_orientation = tf.rotation_matrix_z([0, np.pi / 2])\n",
+    "lcs_childchild_in_child = tf.LocalCoordinateSystem(\n",
+    "    coordinates=childchild_coords, orientation=childchild_orientation, time=childchild_time\n",
     ")\n",
     "\n",
     "csm_tdp = tf.CoordinateSystemManager(\"root\")\n",
     "csm_tdp.add_coordinate_system(\"parent\", \"root\", lcs_parent_in_root)\n",
-    "csm_tdp.add_coordinate_system(\"child\", \"parent\", lcs_child_in_parent)"
+    "csm_tdp.add_coordinate_system(\"child\", \"parent\", lcs_child_in_parent)\n",
+    "csm_tdp.add_coordinate_system(\"child child\", \"child\", lcs_childchild_in_child)"
    ]
   },
   {
@@ -426,22 +440,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lcs_child_in_root = csm_tdp.get_local_coordinate_system(\"child\", \"root\")"
+    "lcs_child_in_root = csm_tdp.get_local_coordinate_system(\"child\", \"root\")\n",
+    "lcs_childchild_in_root = csm_tdp.get_local_coordinate_system(\"child child\", \"root\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e83b956ae5f145f88010f92440a71737",
+       "model_id": "c80036ebb8df4c1799012c2172d2f133",
        "version_major": 2,
        "version_minor": 0
       },
@@ -455,10 +470,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f59987e06d0>"
+       "<matplotlib.legend.Legend at 0x7f945fbf9130>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,12 +481,45 @@
    "source": [
     "fig_tdp = plt.figure()\n",
     "ax_tdp = plt.gca(projection=\"3d\")\n",
+    "\n",
+    "\n",
+    "parent_coords = []\n",
+    "for i in range(len(lcs_parent_in_root.time)):\n",
+    "    label = None\n",
+    "    if i == 0:\n",
+    "        label = \"parent\"\n",
+    "    vs.plot_coordinate_system(\n",
+    "        lcs_parent_in_root, ax_tdp, color=\"g\", label=label, time_idx=i\n",
+    "    )\n",
+    "    parent_coords.append(lcs_parent_in_root.coordinates[i].data)\n",
+    "\n",
+    "    \n",
+    "child_coords = []\n",
     "for i in range(len(lcs_child_in_root.time)):\n",
     "    label = None\n",
     "    if i == 0:\n",
-    "        label=\"child\"\n",
-    "    vs.plot_coordinate_system(lcs_child_in_root, ax_tdp, color=\"y\", label=label, time_idx=i)\n",
+    "        label = \"child\"\n",
+    "    vs.plot_coordinate_system(\n",
+    "        lcs_child_in_root, ax_tdp, color=\"y\", label=label, time_idx=i\n",
+    "    )\n",
+    "    child_coords.append(lcs_child_in_root.coordinates[i].data)\n",
+    "\n",
+    "childchild_coords = []    \n",
+    "for i in range(len(lcs_childchild_in_root.time)):\n",
+    "    label = None\n",
+    "    if i == 0:\n",
+    "        label = \"child child\"\n",
+    "    vs.plot_coordinate_system(\n",
+    "        lcs_childchild_in_root, ax_tdp, color=\"b\", label=label, time_idx=i\n",
+    "    )\n",
+    "    childchild_coords.append(lcs_childchild_in_root.coordinates[i].data)\n",
     "    \n",
+    "parent_coords = np.array(parent_coords)       \n",
+    "ax_tdp.plot(parent_coords[:,0],parent_coords[:,1],parent_coords[:,2],\"--g\")\n",
+    "child_coords = np.array(child_coords)       \n",
+    "ax_tdp.plot(child_coords[:,0],child_coords[:,1],child_coords[:,2],\"--y\")    \n",
+    "childchild_coords = np.array(childchild_coords)       \n",
+    "ax_tdp.plot(childchild_coords[:,0],childchild_coords[:,1],childchild_coords[:,2],\"--b\")    \n",
     "ax_tdp.set_xlim([-3, 3])\n",
     "ax_tdp.set_ylim([-3, 3])\n",
     "ax_tdp.set_zlim([-3, 3])\n",
@@ -483,7 +531,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **TODO** Time dependent data"
+    "> **TODO** \n",
+    "- interp_time\n",
+    "- Time dependent data"
    ]
   },
   {
