Rename some functions

--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -150,7 +150,7 @@
    "source": [
     "> **HINT:** In the jupyter notebook version of this tutorial, you can rotate the plot by pressing the left mouse button and moving the mouse. This helps to understand how the different coordinate systems are positioned in the 3d space.\n",
     "\n",
-    "Apart from the class constructor, there are some factory functions implemented to create a coordinate system. The `construct_from_orientation` provides the same functionality as the class constructor. The `construct_from_xyz` takes 3 basis vectors instead of a matrix. `construct_from_xy_and_orientation`, `construct_from_xz_and_orientation` and `construct_from_yz_and_orientation` create a coordinate system with 2 basis vectors and a `bool` which specifies if the coordinate system should have a positive or negative orientation. Here are some examples:"
+    "Apart from the class constructor, there are some factory functions implemented to create a coordinate system. The `from_orientation` provides the same functionality as the class constructor. The `from_xyz` takes 3 basis vectors instead of a matrix. `from_xy_and_orientation`, `from_xz_and_orientation` and `from_yz_and_orientation` create a coordinate system with 2 basis vectors and a `bool` which specifies if the coordinate system should have a positive or negative orientation. Here are some examples:"
    ]
   },
   {
@@ -163,10 +163,10 @@
     "e_x = [1, 2, 0]\n",
     "e_y = [-2, 1, 0]\n",
     "e_z = [0, 0, 5]\n",
-    "lcs_03 = tf.LocalCoordinateSystem.construct_from_xyz(e_x, e_y, e_z, coordinates=[1, 1, 0])\n",
+    "lcs_03 = tf.LocalCoordinateSystem.from_xyz(e_x, e_y, e_z, coordinates=[1, 1, 0])\n",
     "\n",
     "# create a negatively oriented coordinate system with 2 vectors\n",
-    "lcs_04 = tf.LocalCoordinateSystem.construct_from_yz_and_orientation(\n",
+    "lcs_04 = tf.LocalCoordinateSystem.from_yz_and_orientation(\n",
     "    e_y, e_z, positive_orientation=False, coordinates=[1, 1, 2]\n",
     ")"
    ]
@@ -219,7 +219,7 @@
    "source": [
     "As you can see, the y- and z-axis of system 3 and 4 are pointing into the same direction, since we used the same basis vectors. The automatically determined x axis of system 4 points into the opposite direction, since we wanted a system with negative orientation.\n",
     "\n",
-    "Another method to create a `LocalCoordinateSystem` is `construct_from_euler`. It utilizes the `scipy.spatial.transform.Rotation.from_euler` function to calculate a rotation matrix from Euler sequences and uses it to describe the orientation of the coordinate system. The parameters `sequence`, `angles`, and `degrees` of the `construct_from_euler` method are directly passed to the SciPy function. `sequence` expects a string that determines the rotation sequence around the coordinate axes. For example `\"xyz\"`. `angles` is  a scalar or list of the corresponding number of angles and `degrees` a `bool` that specifies if the angles are provided in degrees (`degrees=True`) or radians (`degrees=False`). For further details, have a look at the [SciPy documentation](https://docs.scipy.org/doc/scipy/reference/generated/scipy.spatial.transform.Rotation.from_euler.html) of the `from_euler` function. Here is a short example:"
+    "Another method to create a `LocalCoordinateSystem` is `from_euler`. It utilizes the `scipy.spatial.transform.Rotation.from_euler` function to calculate a rotation matrix from Euler sequences and uses it to describe the orientation of the coordinate system. The parameters `sequence`, `angles`, and `degrees` of the `from_euler` method are directly passed to the SciPy function. `sequence` expects a string that determines the rotation sequence around the coordinate axes. For example `\"xyz\"`. `angles` is  a scalar or list of the corresponding number of angles and `degrees` a `bool` that specifies if the angles are provided in degrees (`degrees=True`) or radians (`degrees=False`). For further details, have a look at the [SciPy documentation](https://docs.scipy.org/doc/scipy/reference/generated/scipy.spatial.transform.Rotation.from_euler.html) of the `from_euler` function. Here is a short example:"
    ]
   },
   {
@@ -229,8 +229,8 @@
    "outputs": [],
    "source": [
     "# create a coordinate system by a 90° rotation around the x axis and subsequent 45° rotation around the y axis\n",
-    "lcs_05 = tf.LocalCoordinateSystem.construct_from_euler(sequence=\"x\", angles=90, degrees=True, coordinates=[1, -1, 0])\n",
-    "lcs_06 = tf.LocalCoordinateSystem.construct_from_euler(\n",
+    "lcs_05 = tf.LocalCoordinateSystem.from_euler(sequence=\"x\", angles=90, degrees=True, coordinates=[1, -1, 0])\n",
+    "lcs_06 = tf.LocalCoordinateSystem.from_euler(\n",
     "    sequence=\"xy\", angles=[90, 45], degrees=True, coordinates=[2, -2, 0]\n",
     ")"
    ]
@@ -569,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lcs_child_in_parent = tf.LocalCoordinateSystem.construct_from_euler(\n",
+    "lcs_child_in_parent = tf.LocalCoordinateSystem.from_euler(\n",
     "    sequence=\"xy\", angles=[90, 45], degrees=True, coordinates=[2, 3, 0]\n",
     ")\n",
     "lcs_parent_in_child = lcs_child_in_parent.invert()"
@@ -901,7 +901,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lcs_target_in_ref = tf.LocalCoordinateSystem.construct_from_euler(\n",
+    "lcs_target_in_ref = tf.LocalCoordinateSystem.from_euler(\n",
     "    sequence=\"zy\", angles=[90, 45], degrees=True, coordinates=[2, -2, 0]\n",
     ")\n",
     "lcs_ref_in_target = lcs_target_in_ref.invert()\n",
