typo fixes in example notebook

--- a/scripts/measurement_example.ipynb
+++ b/scripts/measurement_example.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vhirtham\\PycharmProjects\\bam\\weldx\n"
+      "C:\\Python\\weldx\n"
      ]
     }
    ],
@@ -20,16 +20,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,13 +53,13 @@
    "source": [
     "## Generating the measurement data\n",
     "We start by creating some \"dummy\" datasets that represent the current and voltage measurements.\n",
-    "In a real application, these would be the datasets that we would copy from our measurement equipment (e.g. downloaded form a HKS-WelQAS, oszilloscope or similar systems).\n",
+    "In a real application, these would be the datasets that we would copy from our measurement equipment (e.g. downloaded form a HKS-WeldQAS, oscilloscope or similar systems).\n",
     "The values in these dataset represent the actual physical current and voltage data in A and V."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +89,7 @@
        "  * time     (time) datetime64[ns] 2020-06-01 ... 2020-06-01T00:00:10)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +119,7 @@
        "  * time     (time) datetime64[ns] 2020-06-01 ... 2020-06-01T00:00:10)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,18 +149,18 @@
    "metadata": {},
    "source": [
     "## Equipment and Software\n",
-    "Next, let's define some of the equipment and software that is used thoughout the measurement chain. We will use and add more infomation to these objects later.\n",
+    "Next, let's define some of the equipment and software that is used throughout the measurement chain. We will use and add more information to these objects later.\n",
     "\n",
     "In out example, two types of hardware equipment are used:\n",
     "- The [`HKS P1000-S3`](https://hks-prozesstechnik.de/en/sensors-2/) is a standard welding process sensor that detects the welding voltage and current using a hall sensor. The result is output as two analog signals scaled to +/- 10 V.\n",
     "- The [`Beckhoff ELM3002-0000`](https://www.beckhoff.com/ELM3002/) is a fieldbus AD-converter terminal that picks up the analog signals of the HKS Sensor and transmits them digitally to the control software.\n",
     "\n",
-    "The final piece involved in the measurement chain is the Software used to record, scale and save both the welding current and voltage measurements. We define the software version and name used during the example using builtin ASDF types."
+    "The final piece involved in the measurement chain is the Software used to record, scale and save both the welding current and voltage measurements. We define the software version and name used during the example using built-in ASDF types."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +185,7 @@
    "metadata": {},
    "source": [
     "## Defining a measurement chain: current measurement\n",
-    "Now we define the missing elements of our measurement chain and bundle everything together. A core concet of the chain are `signals` that go in and out of `transformations` which define mathematical operations of the signals, forming the chain.\n",
+    "Now we define the missing elements of our measurement chain and bundle everything together. A core concept of the chain are `signals` that go in and out of `transformations` which define mathematical operations of the signals, forming the chain.\n",
     "\n",
     "Each measurement chain starts with a `Source` signal. This is the point where our physical process or quantity is initially detected by a sensor. We define a `measurement.Source` object by giving a `name`, defining the `Signal` type and an `error` representing the uncertainty attached to the signal source. In a way, a `Source` is a special type of `transformation` in that it only has an `output_signal` but no `input_signal`.\n",
     "\n",
@@ -204,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,18 +226,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step in the chain is picking up the analog voltage signal from our source with the Beckhoff AD converter terminal which transform the signal into an internal signed integer value. The formular describing this linear transformation with input `x` is\n",
+    "The next step in the chain is picking up the analog voltage signal from our source with the Beckhoff AD converter terminal which transform the signal into an internal signed integer value. The formula describing this linear transformation with input `x` is\n",
     "```\n",
     "a * x + b\n",
     "32768 / (10 V) * x  + 0\n",
     "```\n",
-    "We express this signal transformation as an analytical formular created with the `sympy` package. Based on the above formular we also define the static parameters `a` and `b` in the `MathematicalExpression`. Note that we use quantities here as well !\n",
+    "We express this signal transformation as an analytical formula created with the `sympy` package. Based on the above formula we also define the static parameters `a` and `b` in the `MathematicalExpression`. Note that we use quantities here as well !\n",
     "Since our result is a dimensionless integer `a` has the unit **1/V** and `b` is dimensionless which we indicate with `\"\"`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to the AD conversion, we add the final step of our signal processing chain: digitally converting the signal to the final physical representation of the welding current. The current calibration formular from our integer values to the real current values is as follows:\n",
+    "Similar to the AD conversion, we add the final step of our signal processing chain: digitally converting the signal to the final physical representation of the welding current. The current calibration formula from our integer values to the real current values is as follows:\n",
     "```\n",
     "1000 A / 32768 * x  + 0 A\n",
     "```\n",
@@ -312,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +317,7 @@
    "metadata": {},
    "source": [
     "We create the final transformation step:\n",
-    "- the input signal now is the oputput signal of the previous AD conversion\n",
+    "- the input signal now is the output signal of the previous AD conversion\n",
     "- the output signal is our final current measurement representation\n",
     "- we add the our measurement data to this signal !\n",
     "- we add the software as a meta field to the signal transformation"
@@ -335,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,12 +343,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that all transformation steps are defined, we can create our `MeasurementChain` object. We pass on the intial source as well as all transformation steps in order."
+    "Now that all transformation steps are defined, we can create our `MeasurementChain` object. We pass on the initial source as well as all transformation steps in order."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,12 +489,12 @@
    "metadata": {},
    "source": [
     "## Writing to ASDF\n",
-    "Once we have define all object we can write them to a asdf file. To make the file easier to read we place some elements earlier in the tree."
+    "Once we have define all object we can write them to a ASDF file. To make the file easier to read we place some elements earlier in the tree."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,13 +515,6 @@
     "with asdf.AsdfFile(tree, extensions=[WeldxExtension(), WeldxAsdfExtension()]) as f:\n",
     "    f.write_to(\"scripts/measurement_example.asdf\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
