--- a/tutorials/timeseries_01.ipynb
+++ b/tutorials/timeseries_01.ipynb
@@ -952,7 +952,7 @@
    "metadata": {},
    "source": [
     "## vector example\n",
-    "We careful syntax it is also possible to create multidimensional `TimeSeries` objects from math expressions."
+    "With careful syntax it is also possible to create multidimensional `TimeSeries` objects from math expressions."
    ]
   },
   {
