update notebook_fileprinter to work with buffer

--- a/tutorials/GMAW_process.ipynb
+++ b/tutorials/GMAW_process.ipynb
@@ -103,39 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"gmaw_process.yaml\"\n",
-    "tree = {\"Q\":TS(Q_(10, \"m/min\")),\"spray\": process_spray, \"pulse_UI\": process_pulse, \"pulse_II\": process_pulse_II}\n",
-    "\n",
-    "# Write the data to a new file\n",
-    "with asdf.AsdfFile(\n",
-    "    tree,\n",
-    "    extensions=[WeldxExtension(), WeldxAsdfExtension()],\n",
-    "    ignore_version_mismatch=False,\n",
-    ") as ff:\n",
-    "    ff.write_to(filename)"
+    "tree = {\"spray\": process_spray, \"pulse_UI\": process_pulse, \"pulse_II\": process_pulse_II}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read back data from ASDF file\n",
-    "with asdf.open(\n",
-    "    filename, copy_arrays=True, extensions=[WeldxExtension(), WeldxAsdfExtension()]\n",
-    ") as af:\n",
-    "    data = af.tree\n",
-    "    # print(data[\"obj\"])"
+    "buffer = weldx.asdf.utils._write_buffer(tree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -224,9 +210,6 @@
        "  <span class=\"p p-Indicator\">-</span> <span class=\"kt\">!core/extension_metadata-1.0.0</span>\n",
        "    <span class=\"nt\">extension_class</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">weldx.asdf.extension.WeldxExtension</span>\n",
        "    <span class=\"nt\">software</span><span class=\"p\">:</span> <span class=\"kt\">!core/software-1.0.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"s\">&#39;&#39;</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"s\">&#39;&#39;</span><span class=\"p p-Indicator\">}</span>\n",
-       "<span class=\"nt\">Q</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/core/time_series-1.0.0&gt;</span>\n",
-       "  <span class=\"nt\">unit</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">meter / minute</span>\n",
-       "  <span class=\"nt\">values</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">10</span>\n",
        "<span class=\"nt\">pulse_II</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/process/CLOOS/pulse-1.0.0&gt;</span>\n",
        "  <span class=\"nt\">base_process</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">pulse</span>\n",
        "  <span class=\"nt\">manufacturer</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">CLOOS</span>\n",
@@ -293,21 +276,23 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weldx.asdf.utils.notebook_fileprinter(filename)"
+    "weldx.asdf.utils.notebook_fileprinter(buffer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = weldx.asdf.utils._read_buffer(buffer)"
+   ]
   }
  ],
  "metadata": {
