--- a/tutorials/GMAW_process.ipynb
+++ b/tutorials/GMAW_process.ipynb
@@ -49,6 +49,7 @@
     "    wire_feedrate=Q_(10.0, \"m/min\"),\n",
     "    voltage=Q_(40.0, \"V\"),\n",
     "    impedance=Q_(10.0, \"percent\"),\n",
+    "    characteristic=Q_(5,\"V/A\"),\n",
     ")\n",
     "process_spray = GmawProcess(\n",
     "    \"spray\", \"CLOOS\", \"Quinto\", params_spray, tag=\"CLOOS/spray_arc\"\n",
@@ -258,6 +259,9 @@
        "  <span class=\"nt\">base_process</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">spray</span>\n",
        "  <span class=\"nt\">manufacturer</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">CLOOS</span>\n",
        "  <span class=\"nt\">parameters</span><span class=\"p\">:</span>\n",
+       "    <span class=\"nt\">characteristic</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/core/time_series-1.0.0&gt;</span>\n",
+       "      <span class=\"nt\">unit</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">volt / ampere</span>\n",
+       "      <span class=\"nt\">values</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">5</span>\n",
        "    <span class=\"nt\">impedance</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/core/time_series-1.0.0&gt;</span>\n",
        "      <span class=\"nt\">unit</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">percent</span>\n",
        "      <span class=\"nt\">values</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">10.0</span>\n",
