--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -435,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Adding every single superposition step in the coordinate system amanger can be more flexible and explicit, but will clutter the CSM instance for complex movements."
+    "Adding every single superposition step in the coordinate system manager can be more flexible and explicit, but will clutter the CSM instance for complex movements."
    ]
   },
   {
@@ -445,7 +445,7 @@
     "## plot with time interpolation\n",
     "Sometimes we might only be interested in a specific time range of the experiment or we want to change the time resolution. For this we can use the time interpolation methods of the coordinate systems (or the CSM).\n",
     "\n",
-    "Let's say we want to vie only 8 seconds of our experiment (starting from 2020-04-20 10:03:00) but interpolate steps of 1 ms."
+    "Let's say we want to weave only 8 seconds of our experiment (starting from 2020-04-20 10:03:00) but interpolate steps of 1 ms."
    ]
   },
   {
