update process example

--- a/tutorials/GMAW_process.ipynb
+++ b/tutorials/GMAW_process.ipynb
@@ -47,7 +47,7 @@
     "# Note: For some reasons, using integers in Q_ fails upon ASDF reading !\n",
     "params_spray = dict(\n",
     "    wire_feedrate=Q_(10.0, \"m/min\"),\n",
-    "    voltage=Q_(40.0, \"V\"),\n",
+    "    voltage=TS(data=Q_([40.0,20.0], \"V\"),time=Q_([0.0,10.0],\"s\")),\n",
     "    impedance=Q_(10.0, \"percent\"),\n",
     "    characteristic=Q_(5,\"V/A\"),\n",
     ")\n",
@@ -206,11 +206,11 @@
        "<span class=\"nt\">history</span><span class=\"p\">:</span>\n",
        "  <span class=\"nt\">extensions</span><span class=\"p\">:</span>\n",
        "  <span class=\"p p-Indicator\">-</span> <span class=\"kt\">!core/extension_metadata-1.0.0</span>\n",
-       "    <span class=\"nt\">extension_class</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">weldx.asdf.extension.WeldxExtension</span>\n",
-       "    <span class=\"nt\">software</span><span class=\"p\">:</span> <span class=\"kt\">!core/software-1.0.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"s\">&#39;&#39;</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"s\">&#39;&#39;</span><span class=\"p p-Indicator\">}</span>\n",
-       "  <span class=\"p p-Indicator\">-</span> <span class=\"kt\">!core/extension_metadata-1.0.0</span>\n",
        "    <span class=\"nt\">extension_class</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">asdf.extension.BuiltinExtension</span>\n",
        "    <span class=\"nt\">software</span><span class=\"p\">:</span> <span class=\"kt\">!core/software-1.0.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"nv\">asdf</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"nv\">2.7.0</span><span class=\"p p-Indicator\">}</span>\n",
+       "  <span class=\"p p-Indicator\">-</span> <span class=\"kt\">!core/extension_metadata-1.0.0</span>\n",
+       "    <span class=\"nt\">extension_class</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">weldx.asdf.extension.WeldxExtension</span>\n",
+       "    <span class=\"nt\">software</span><span class=\"p\">:</span> <span class=\"kt\">!core/software-1.0.0</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">name</span><span class=\"p\">:</span> <span class=\"s\">&#39;&#39;</span><span class=\"p p-Indicator\">,</span><span class=\"nt\"> version</span><span class=\"p\">:</span> <span class=\"s\">&#39;&#39;</span><span class=\"p p-Indicator\">}</span>\n",
        "<span class=\"nt\">pulse_II</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/process/CLOOS/pulse-1.0.0&gt;</span>\n",
        "  <span class=\"nt\">base_process</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">pulse</span>\n",
        "  <span class=\"nt\">manufacturer</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">CLOOS</span>\n",
@@ -266,8 +266,24 @@
        "      <span class=\"nt\">unit</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">percent</span>\n",
        "      <span class=\"nt\">values</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">10.0</span>\n",
        "    <span class=\"nt\">voltage</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/core/time_series-1.0.0&gt;</span>\n",
+       "      <span class=\"nt\">time</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0&gt;</span>\n",
+       "        <span class=\"nt\">values</span><span class=\"p\">:</span> <span class=\"kt\">!core/ndarray-1.0.0</span>\n",
+       "          <span class=\"nt\">source</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">0</span>\n",
+       "          <span class=\"nt\">datatype</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">int64</span>\n",
+       "          <span class=\"nt\">byteorder</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">little</span>\n",
+       "          <span class=\"nt\">shape</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">[</span><span class=\"nv\">2</span><span class=\"p p-Indicator\">]</span>\n",
+       "        <span class=\"nt\">start</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/time/timedelta-1.0.0&gt;</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">value</span><span class=\"p\">:</span> <span class=\"nv\">P0DT0H0M0S</span><span class=\"p p-Indicator\">}</span>\n",
+       "        <span class=\"nt\">end</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/time/timedelta-1.0.0&gt;</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">value</span><span class=\"p\">:</span> <span class=\"nv\">P0DT0H0M10S</span><span class=\"p p-Indicator\">}</span>\n",
+       "        <span class=\"nt\">min</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/time/timedelta-1.0.0&gt;</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">value</span><span class=\"p\">:</span> <span class=\"nv\">P0DT0H0M0S</span><span class=\"p p-Indicator\">}</span>\n",
+       "        <span class=\"nt\">max</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/time/timedelta-1.0.0&gt;</span> <span class=\"p p-Indicator\">{</span><span class=\"nt\">value</span><span class=\"p\">:</span> <span class=\"nv\">P0DT0H0M10S</span><span class=\"p p-Indicator\">}</span>\n",
        "      <span class=\"nt\">unit</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">volt</span>\n",
-       "      <span class=\"nt\">values</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">40.0</span>\n",
+       "      <span class=\"nt\">shape</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">[</span><span class=\"nv\">2</span><span class=\"p p-Indicator\">]</span>\n",
+       "      <span class=\"nt\">interpolation</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">linear</span>\n",
+       "      <span class=\"nt\">values</span><span class=\"p\">:</span> <span class=\"kt\">!core/ndarray-1.0.0</span>\n",
+       "        <span class=\"nt\">source</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">1</span>\n",
+       "        <span class=\"nt\">datatype</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">float64</span>\n",
+       "        <span class=\"nt\">byteorder</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">little</span>\n",
+       "        <span class=\"nt\">shape</span><span class=\"p\">:</span> <span class=\"p p-Indicator\">[</span><span class=\"nv\">2</span><span class=\"p p-Indicator\">]</span>\n",
        "    <span class=\"nt\">wire_feedrate</span><span class=\"p\">:</span> <span class=\"kt\">!&lt;tag:weldx.bam.de:weldx/core/time_series-1.0.0&gt;</span>\n",
        "      <span class=\"nt\">unit</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">meter / minute</span>\n",
        "      <span class=\"nt\">values</span><span class=\"p\">:</span> <span class=\"l l-Scalar l-Scalar-Plain\">10.0</span>\n",
