update syntax in tutorial notebooks

--- a/tutorials/transformations_01_coordinate_systems.ipynb
+++ b/tutorials/transformations_01_coordinate_systems.ipynb
@@ -4,17 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyter-vhirtham/weldx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%cd .."
+    "%cd -q .."
    ]
   },
   {
@@ -1071,9 +1063,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "libo (3.8)",
+   "display_name": "libo",
    "language": "python",
-   "name": "libo_38"
+   "name": "libo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1085,7 +1077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
