--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -19,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd .."
+    "%cd -q .."
    ]
   },
   {
@@ -743,9 +743,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "libo (3.8)",
+   "display_name": "libo",
    "language": "python",
-   "name": "libo_38"
+   "name": "libo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -757,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
